--- a/templates/index.html
+++ b/templates/index.html
@@ -5,19 +5,9 @@
 {% block main_content %}
     <div class="row">
     {% for item in items %}
-        <div class="col-sm-3">
-    <ul class="media-list">
-        <li class="media">
-            <div class="media-left">
-                <a href="{{ item['mobile_link'] }}">
-                    <img class="media-object" src="{{ item['thumb'] }}" alt="...">
-                </a>
-            </div>
-            <div class="media-body">
-                <p class="media-heading">{{ item['title'] }}</p>
-            </div>
-        </li>
-    </ul>
+        <div class="col-xs-6 col-sm-6 col-md-3">
+            <img class="img-responsive" src="{{ item['thumb'] }}" alt="{{ item['title'] }}" />
+            <p class="text-primary"><a href="{{ item['mobile_link'] }}" title="{{ item['title'] }}">{{ item['title'] }}</a></p>
         </div>
     {% endfor %}
     </div>
